# Beyond21

./: LICENSE  README.md  beyond21.yml  pyproject.toml
src/beyond21/: __init__.py  constants.py  cosmology.py  evolution.py  global_wrapper.py  inter_galactic_medium.py  interpolations.py  lyman_spec.py  non_ion_uv.py  sfrd.py  sfrd_ion_uv.py  uvlf.py  xrays.py  xrays_mw_abs.py
src/beyond21/data/: PhotoionXsec_Verner95.txt  __init__.py  desktop.ini  spectral_distribution
src/beyond21/data/fmod/: fmod_interp_Ahn.npy  fmod_interp_Fialkov.npy
src/beyond21/data/hydrogen_scattering_rates/: HH scattering rate.csv  eH scattering rate.csv  pH scattering rate.csv
src/beyond21/data/lya_coupling_grids/: S_tilde  S_tilde_2  TC  TC_2  Tk  Tk_2  Ts  tauGP_2
src/beyond21/data/lya_heat_grids/Lya_Heat_new/: Cont_Palpha_grid.npy  Inj_Palpha_grid.npy  Inj_Palpha_grid_1.npy  Inj_Palpha_grid_2.npy  Inj_Palpha_grid_tot.npy
src/beyond21/data/lya_heat_grids/LyalphaHeating_Grids/: HeatC  HeatI  Readme.txt  Tk_Heat  Ts_Heat  tauGP_Heat
src/beyond21/data/lya_heat_grids/LyalphaHeating_Grids_highTK/: HeatC  HeatI  Tk_Heat  Ts_Heat
src/beyond21/data/mdm_integrals/: Atoms_n-4  Ions_n-4
src/beyond21/igm_mdm/: __init__.py  inter_galactic_medium.py  mdm.py  mdm_integrals.py
src/beyond21/utils/: __init__.py  interp_reg_grid.py  interp_sorted_grid.py  plotter.py
tutorial/: tutorial_2cdm.ipynb  tutorial_lcdm.ipynb
