[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond21"
version = "0.1.0"
description = "Beyond21: A Global Cosmic Dawn and Reionization Framework"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23,<2",
  "scipy>=1.10,<2",
  "pyyaml>=6,<7",
  "sympy>=1.12,<2",
  "colossus>=1.3,<2",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7,<3.9"]
interactive = ["jupyterlab>=4,<5", "ipywidgets>=8,<9"]
all = [
  "matplotlib>=3.7,<3.9",
  "jupyterlab>=4,<5",
  "ipywidgets>=8,<9"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beyond21 = ["data/**/*"]